data/derived/fa15/progs/unify/prog1430.ml.out
Characters 146-150:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type int * 'a list
       but an expression was expected of type string
